Fix Input autocomplete

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <div class="calculadora">
                 <div class="containerDisplay">
                     
-                       <input id="inputCalculadora" placeholder="0" type="text" >
+                       <input id="inputCalculadora" placeholder="0" type="text"  autocomplete="off" >
                     
                 </div>
                 <div class="containerTeclas">
